// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Board All Cross 1`] = `
Array [
  <div
    className="status"
  >
    Winner: X
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
  </div>,
]
`;

exports[`Storyshots Board All Round 1`] = `
Array [
  <div
    className="status"
  >
    Winner: O
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
  </div>,
]
`;

exports[`Storyshots Board All Triangle 1`] = `
Array [
  <div
    className="status"
  >
    Winner: △
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>,
]
`;

exports[`Storyshots Board Cross And Triangle 1`] = `
Array [
  <div
    className="status"
  >
    Next player: X
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>,
]
`;

exports[`Storyshots Board Empty 1`] = `
Array [
  <div
    className="status"
  >
    Next player: X
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
  </div>,
]
`;

exports[`Storyshots Board Round And Cross 1`] = `
Array [
  <div
    className="status"
  >
    Next player: X
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
  </div>,
]
`;

exports[`Storyshots Board Round And Cross And Triangle 1`] = `
Array [
  <div
    className="status"
  >
    Next player: X
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>,
]
`;

exports[`Storyshots Board Round And Triangle 1`] = `
Array [
  <div
    className="status"
  >
    Next player: X
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      O
    </button>
  </div>,
]
`;

exports[`Storyshots Game Default 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div
      className="status"
    >
      Next player: X
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
      />
      <button
        className="square"
        onClick={[Function]}
      />
      <button
        className="square"
        onClick={[Function]}
      />
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
      />
      <button
        className="square"
        onClick={[Function]}
      />
      <button
        className="square"
        onClick={[Function]}
      />
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        onClick={[Function]}
      />
      <button
        className="square"
        onClick={[Function]}
      />
      <button
        className="square"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="game-info"
  >
    <ol>
      <li>
        <button
          onClick={[Function]}
        >
          Go to game start
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Square Empty 1`] = `
<button
  className="square"
/>
`;

exports[`Storyshots Square Selected By Circle 1`] = `
<button
  className="square"
>
  O
</button>
`;

exports[`Storyshots Square Selected By Cross 1`] = `
<button
  className="square"
>
  X
</button>
`;

exports[`Storyshots Square Selected By Triangle 1`] = `
<button
  className="square"
>
  △
</button>
`;
